--- a/main2.css
+++ b/main2.css
@@ -1,28 +1,26 @@
 
 
-
 .boxblue {
 	position: relative;
-	width: 500px;
-	height: 500px;
+	width: 400px;
+	height: 400px;
 	background-color: blue;
 }
 
 .boxgreen {
 	position: absolute;
-	width: 100px;
-	height: 100px;
+	width: 400px;
+	height: 400px;
 	background-color: green;
-	bottom:  40px;
+	top:  40px;
 	left: 50px;
 }
 
 .boxred {
 	position: absolute;
-	width: 100px;
-	height: 100px;
+	width: 400px;
+	height: 400px;
 	background-color: red;
-	bottom:  40px;
-	left: 350px;
-
+	top:  70px;
+	left: 100px;
 }
